# aws-auth-operator

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml
examples/: dev.yaml
src/: finalizer.rs  lib.rs  main.rs
