[package]
name = "aws-auth-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
anyhow = "1"

# operator & runtime
tokio = { version = "1", features = ["full"] }
kube = { version = "0.65", features = ["runtime", "derive", "jsonpatch"] }
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "0.2"

# logging
log = "0.4"
env_logger = "0.8"
