[package]
name = "aws-auth-operator"
version = "0.1.0"
edition = "2021"
default-run = "operator"

[lib]
name = "operator"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
# error handling
anyhow = "1"
thiserror = "1"

# operator & runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
kube = { version = "0.85", features = ["runtime", "derive", "jsonpatch"] }
k8s-openapi = { version = "0.18", features = ["v1_22"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json-patch = "1"

# logging
log = "0.4"
env_logger = "0.10"
